src/objects/ADvendio__LegalEntity__c.object
<CustomObject>
    <fields>
        <fullName>ADvendio__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>If set to &quot;true&quot;, this legal entity can be linked to from any media campaign and/or invoice.</description>
        <inlineHelpText>If checked this legal entity can be linked to from any Media Campaign and/or Invoice.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ADvendio__CompanyCode__c</fullName>
        <description>Please enter here the Company Code from your Accounting System - this information will be used by ADvendio for interfaces to Accounting Solutions like SAP/FI, Navision, Sage etc..</description>
        <inlineHelpText>Please enter here the Company Code from your Accounting System - this information will be used by ADvendio for interfaces to Accounting Solutions like SAP/FI, Navision, Sage etc..</inlineHelpText>
        <label>Company Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__CountryIsoCode__c</fullName>
        <label>Country ISO Code</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ADvendio__CountryIsoCode</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ADvendio__Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ADvendio__Description__c</fullName>
        <description>Here you can enter a Description for that legal entity.</description>
        <inlineHelpText>Please enter a description for that legal entity.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ADvendio__InvoicePreference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>References the settings for Invoice-PDF.

If not defined the ADvendio standard PDF settings will be used.</description>
        <inlineHelpText>Please select the invoice settings record for Invoice-PDF.

If not defined the ADvendio standard PDF settings will be used.</inlineHelpText>
        <label>Invoice Preference</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ADvendio__InvoicePreference__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Standard_Invoice</value>
            </filterItems>
            <filterItems>
                <field>ADvendio__InvoicePreference__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>ADvendio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__InvoicePreference__c</referenceTo>
        <relationshipLabel>Legal Entities</relationshipLabel>
        <relationshipName>LegalEntities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__LeftPadOfNumberOfInvoice__c</fullName>
        <description>Sets the number of Invoice padded with zeros on the left and of the specified length.</description>
        <inlineHelpText>Sets the number of Invoice padded with zeros on the left and of the specified length.</inlineHelpText>
        <label>Left Pad Of Number Of Invoice</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__LeftPadOfNumberOfMediaCampaign__c</fullName>
        <description>Sets the number of Media Campaign padded with zeros on the left and of the specified length.</description>
        <inlineHelpText>Sets the number of Media Campaign padded with zeros on the left and of the specified length.</inlineHelpText>
        <label>Left Pad Of Number Of Media Campaign</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxAllocatedNumberOfInvoice__c</fullName>
        <label>Max Allocated Number Of Invoice</label>
        <summarizedField>ADvendio__LegalEntityNumberAllocation__c.ADvendio__AllocatedNumber__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__LegalEntityNumberAllocation__c.ADvendio__AllocationType__c</field>
            <operation>equals</operation>
            <value>Invoice, Recycle Bin (Invoice)</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__LegalEntityNumberAllocation__c.ADvendio__LegalEntity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__MaxAllocatedNumberOfMediaCampaign__c</fullName>
        <label>Max Allocated Number Of Media Campaign</label>
        <summarizedField>ADvendio__LegalEntityNumberAllocation__c.ADvendio__AllocatedNumber__c</summarizedField>
        <summaryFilterItems>
            <field>ADvendio__LegalEntityNumberAllocation__c.ADvendio__AllocationType__c</field>
            <operation>equals</operation>
            <value>Media Campaign, Recycle Bin (Media Campaign)</value>
        </summaryFilterItems>
        <summaryForeignKey>ADvendio__LegalEntityNumberAllocation__c.ADvendio__LegalEntity__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>ADvendio__QuotePreference__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>References the settings for Quote-PDF.

If not defined the ADvendio standard PDF settings will be used.</description>
        <inlineHelpText>Please select the quote settings record for the Quote-PDF.

If not defined the ADvendio standard PDF settings will be used.</inlineHelpText>
        <label>Quote Preference</label>
        <lookupFilter>
            <active>false</active>
            <filterItems>
                <field>ADvendio__Quote_Preference__c.RecordType.DeveloperName</field>
                <operation>equals</operation>
                <value>Standard_Quote</value>
            </filterItems>
            <filterItems>
                <field>ADvendio__Quote_Preference__c.RecordType.NamespacePrefix</field>
                <operation>equals</operation>
                <value>ADvendio</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ADvendio__Quote_Preference__c</referenceTo>
        <relationshipLabel>Legal Entities</relationshipLabel>
        <relationshipName>LegalEntities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartingNumberOfInvoice__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Custom start number for invoices.</description>
        <inlineHelpText>With this number ADvendio starts to number the Invoices.</inlineHelpText>
        <label>Starting Number Of Invoice</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__StartingNumberOfMediaCampaign__c</fullName>
        <defaultValue>1</defaultValue>
        <description>Custom starting number for media campaigns.</description>
        <inlineHelpText>With this number ADvendio starts to number Media Campaigns.</inlineHelpText>
        <label>Starting Number Of Media Campaign</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ADvendio__UniqueKey__c</fullName>
        <description>The unique key of the record. It will be set automatically by ADvendio.</description>
        <externalId>true</externalId>
        <inlineHelpText>The unique key of the record. It will be set automatically by ADvendio.</inlineHelpText>
        <label>Unique Key</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Legal Entity</label>
    <listViews>
        <fullName>ADvendio__All</fullName>
        <columns>NAME</columns>
        <columns>ADvendio__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Legal Entity Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal Entities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>